--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,13 @@
 	width: 200px;
 	background-color: orange;
 }
+
+
+/*  Vendors Show Page  */
+.Expired {
+	color: red;
+}
+
+.Active {
+	color: green;
+}
