--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  		<!-- FlipClock JS -->
+	<script src="assets/flipclock.min.js"></script>
 </head>
 <body>
 
@@ -26,6 +29,5 @@
 		<% end %>
 	</ul>
 <%= yield %>
-
 </body>
 </html>
