web sockets working for real time cart updates

--- a/app/views/myproducts/index.html.erb
+++ b/app/views/myproducts/index.html.erb
@@ -1,8 +1,8 @@
 <% if session[:user_id] %>
 	<% if User.where(id:session[:user_id]).first.lname=="placeholdlname"%>
-		<h1>Vendor Account View - Products#show - <%= User.where(id:session[:user_id]).first.username %></h1>
+		<h1>Vendor Account View - Products#show - <%= User.where(id:session[:user_id]).first.username %> - Showing All Deals</h1>
 	<% else %>
-		<h1>Customer Account View - Products#show - <%= User.where(id:session[:user_id]).first.username %></h1>
+		<h1>Customer Account View - Products#show - <%= User.where(id:session[:user_id]).first.username %> - Showing All Deals</h1>
 	<% end %>
 	<p>Find me in app/views/products/show.html.erb</p>
 <% else %>
