--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 
 	<ul>
-		<li><%= link_to 'Home', '/home'%></li>
+		<li><%= link_to 'All Current Deals', '/home'%></li>
 		<% if session[:user_id] %>
 				<li><%= link_to 'Logout', mylogout_path%></li>
 			<% if User.where(id:session[:user_id]).first.lname=="placeholdlname"%>
