--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,9 +23,74 @@
 
 /*  Vendors Show Page  */
 .Expired {
-	color: red;
+	color: white;
+	background-color: red;
 }
 
 .Active {
-	color: green;
+	color: white;
+	background-color: green;
 }
+
+/* Business Account Page */
+
+html {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 900;
+	background-color: #AADDD4;
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
+}
+
+html a:visited {
+	color: blue;
+}
+
+h1 {
+	font-size: 275%;
+	clear: both;
+	color: #EB593B;
+	text-decoration: underline; 
+}
+
+.noDeals {
+	color: #EB593B;
+}
+
+.navbar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 65px;
+	background-color: #EB593B;
+}
+
+.navbar ul li {
+	float: left;
+	padding-left: 10px;
+	padding-right: 12px;
+}
+
+.navbar ul {
+	list-style-type: none;
+	float: right;
+}
+
+.navbar ul li a {
+	text-decoration: none;
+	color: white;
+}
+
+.navbar ul li a:hover {
+	color: #AADDD4;
+}
+
+.yield {
+	margin-top: 75px;
+	margin-left: 10px;
+}
+
+
+
