--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 
 .signup_button {
 	width: 200px;
-	background-color: white;
+	background-color: red;
 	/*outline: none;*/
 }
 
@@ -39,7 +39,7 @@ html {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
 	/*background-color: #AADDD4;*/
-	background-color: #054586;
+	background-color: white;
 	text-decoration: none;
 	margin: 0;
 	padding: 0;
@@ -66,7 +66,8 @@ h1 {
 	left: 0;
 	width: 100%;
 	height: 65px;
-	background-color: #EB593B;
+	/*background-color: #EB593B;*/
+	background-color: green;
 }
 
 /*  Side Navbar  */
@@ -92,7 +93,7 @@ h1 {
 
 .navbar ul li a {
 	text-decoration: none;
-	color: white;
+	color: red;
 }
 
 .navbar ul li a:hover {
@@ -104,7 +105,7 @@ h1 {
 }
 
 .login-link li a:visited {
-	color: #054586;
+	/*color: #054586;*/
 }
 
 .yield {
