--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,8 @@ html {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
 	/*background-color: #AADDD4;*/
-	background-color: #054586;
+	/*background-color: #054586;*/
+	background-color: #75C8EA;
 	text-decoration: none;
 	margin: 0;
 	padding: 0;
@@ -65,8 +66,12 @@ h1 {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 65px;
-	background-color: #EB593B;
+	height: 13%;
+	background-color: white;
+}
+
+.navbar_logo {
+	height: 100px;
 }
 
 /*  Side Navbar  */
@@ -83,6 +88,8 @@ h1 {
 	float: left;
 	padding-left: 10px;
 	padding-right: 12px;
+	padding-top: 26px;
+	font-size: 115%;
 }
 
 .navbar ul {
@@ -92,19 +99,19 @@ h1 {
 
 .navbar ul li a {
 	text-decoration: none;
-	color: white;
+	color: #75C8EA;
 }
 
 .navbar ul li a:hover {
-	color: #054586;
+	color: #75C8EA;
 }
 
 .login-link li a {
-	color: #054586;
+	color: #75C8EA;
 }
 
 .login-link li a:visited {
-	color: #054586;
+	color: #75C8EA;
 }
 
 .yield {
@@ -112,13 +119,19 @@ h1 {
 	margin-left: 10px;
 }
 
-/*Vendor Login Page*/
+/* Vendor Login Page */
 .h1_login {
 	text-align: center;
 	padding-top: 20px;
 }
 
-/*Myproducts - New Page*/
+/* Vendor Show Page */
+.vendors_show_wrapper {
+	padding-top: 3%;
+}
+
+
+/* Myproducts - New Page */
 
 .deal_start {
 	text-align: left;
@@ -132,8 +145,10 @@ h1 {
 
 
 
-
-
+/*Preferences Page Vendor*/
+.pref_wrapper {
+	padding-top: 100px;
+}
 
 
 
