--- a/app/assets/stylesheets/demo.css
+++ b/app/assets/stylesheets/demo.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 body {
-	background: #054586;
+	background: #75C8EA;
 	color: #fff;
 	font-weight: 400;
 	font-size: 1em;
